--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         </div>
         <!-- output container -->
-        <div class="response-container p-4"> 
+        <div class="response-container -mt-3"> 
     
             <table class="mx-auto rounded-md font-bold" style="width: 600px; height: 500px;table-layout: fixed; text-align: center;">
                 <tr>
